# autoware_launcher.ac.universe

autoware_launch/launch/: autocore.ai.launch.xml
sdv_demo_launch/: CMakeLists.txt  package.xml
sdv_demo_launch/launch/: sdv_demo.launch.xml
sensing_launch/: package.xml
sensing_launch/launch/: rslidar_node_container.launch.py
sensing_launch/launch/autocore/: camera.launch.xml  gnss.launch.xml  imu.launch.xml  lidar.launch.xml  pointcloud_preprocessor.launch.py
system_launch/: package.xml
system_launch/launch/: system.launch.xml
vehicle_launch/config/default/autocore/: sensor_kit_calibration.yaml  sensors_calibration.yaml
